Rename Feature Request to Component Request
Updated the issue template from 'Feature Request' to 'Component Request' and modified related fields.

--- a/.github/ISSUE_TEMPLATE/1b_ComponentRequest.yml
+++ b/.github/ISSUE_TEMPLATE/1b_ComponentRequest.yml
@@ -11,7 +11,7 @@
 # SPDX-License-Identifier: Apache-2.0
 # *******************************************************************************
 
-name: Feature Request
+name: Component Request
 description: Issue to track a Feature Request
 title: "Your Feature Request title"
 labels: ["codeowner_review"]
@@ -24,13 +24,12 @@ body:
     attributes:
       label: Feature Request Description
       description: |
-        - Use following template within a PR and link it to this issue
-          [Change Management Feature Request Template](https://eclipse-score.github.io/process_description/main/process_areas/change_management/guidance/change_management_feature_template.html) needs to be used
+       - Follow the [Change Management Workflow](https://eclipse-score.github.io/score/main/platform_management_plan/change_management.html#change-request-workflow) 
     validations:
       required: true
   - type: dropdown
     attributes:
-      label: Expected available in Release 
+      label: Expected Implementation Version (Release)
       options:
         - '1.0'
         - '2.0'
