Update label for expected implementation version

--- a/.github/ISSUE_TEMPLATE/1a_FeatureRequest.yml
+++ b/.github/ISSUE_TEMPLATE/1a_FeatureRequest.yml
@@ -30,7 +30,7 @@ body:
       required: true
   - type: dropdown
     attributes:
-      label: Expected available in Release 
+      label: Expected Implementation Version (Release)
       options:
         - '1.0'
         - '2.0'
