--- a/.github/ISSUE_TEMPLATE/1a_FeatureRequest.yml
+++ b/.github/ISSUE_TEMPLATE/1a_FeatureRequest.yml
@@ -28,6 +28,25 @@ body:
           [Change Management Feature Request Template](https://eclipse-score.github.io/process_description/main/process_areas/change_management/guidance/change_management_feature_template.html) needs to be used
     validations:
       required: true
+  - type: checkboxes
+    attributes:
+      label: Safety or Security relevance
+      options:
+        - label: none
+        - label: Safety relevant
+        - label: Security relevant
+    validations:
+      required: true
+  - type: dropdown
+    attributes:
+      label: ASIL classification
+      options:
+        - QM
+        - ASIL_B
+        - ASIL_D
+      default: 0
+    validations:
+      required: true
   - type: dropdown
     attributes:
       label: Expected Implementation Version (Release)
