--- a/.github/ISSUE_TEMPLATE/5_Bug.yml
+++ b/.github/ISSUE_TEMPLATE/5_Bug.yml
@@ -34,7 +34,7 @@ body:
       description: |
         Documentation of the analysis results
     validations:
-      required: true
+      required: false
   - type: textarea
     attributes:
       label: Solution
