--- a/.github/ISSUE_TEMPLATE/5_Bug.yml
+++ b/.github/ISSUE_TEMPLATE/5_Bug.yml
@@ -12,7 +12,7 @@
 # *******************************************************************************
 
 name: Bug
-description: Issue to track a bug
+description: Issue to track a Bug
 title: "Your Bug title"
 labels: ["codeowner_review"]
 type: 'Bug'
@@ -78,6 +78,7 @@ body:
     attributes:
       label: First Affected Release 
       options:
+        - not released (main)        
         - pre-0.5
         - 0.5
         - 0.6
